--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -3,7 +3,7 @@ version: '3.4'
 services:
   fuzzingbook:
     image: python-3.8
-    container_name: my-python-3.8
+    container_name: scrapping-WoS
     build:
       context: .
       dockerfile: ./Dockerfile
