--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 # To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
 # [dependency-name]
+numpy==1.16.0
+pandas==0.23.4
 
 
